WICKET-4203 Wicket fails to start when deployed filenames contain space characters
git-svn-id: https://svn.apache.org/repos/asf/wicket/trunk@1199648 13f79535-47bb-0310-9956-ffa450edef68